# lifers

./: CHANGELOG-old.md  CHANGELOG.md  Cargo.toml  README.md
benches/: conway.rs
src/: engine.rs  frontend.rs  lib.rs  macros.rs
src/engine/: generic.rs  life_like.rs  mod.rs
